--- a/Template/ClientApp/src/app/user/sign-up/sign-up.component.html
+++ b/Template/ClientApp/src/app/user/sign-up/sign-up.component.html
@@ -6,21 +6,18 @@
       </div>
       <form class="col s12 white" #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)">
         <div class="row">
-          <div class="input-field col s6">
-            <input class="validate" type="text" name="UserName" #UserName="ngModel" [(ngModel)]="user.UserName" required>
-            <label data-error="Required field!">UserName</label>
-          </div>
-          <div class="input-field col s6">
-            <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required  minlength="3">
-            <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 3 characters needed'):''">Password</label>
+          <div class="input-field col s12">
+            <input class="validate" type="text" name="Email" #Email="ngModel" [(ngModel)]="user.Email" [pattern]="emailPattern" required>
+            <label data-error="Invalid email!">Email</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
-            <input class="validate" type="text" name="Email" #Email="ngModel" [(ngModel)]="user.Email" [pattern]="emailPattern">
-            <label data-error="Invalid email!">Email</label>
+            <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required  minlength="3">
+            <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 3 characters needed'):''">Password</label>
           </div>
         </div>
+        
         <div class="row">
           <div class="input-field col s6">
             <input type="text" name="FirstName" #FirstName="ngModel" [(ngModel)]="user.FirstName">
